--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@ body {
 .name { font-size: 30px; font-weight: 700; }
 .title { font-size: 17px; margin: 4px 0 10px; }
 .contact, .location { font-size: 14px; color: var(--muted); }
-.contact a { color: inherit; text-decoration: none; }
+a {color: darkgreen;}
 section { margin-top: 28px; }
 section h2 {
   font-size: 15px;
@@ -84,7 +84,9 @@ ul li { margin-bottom: 4px; }
 <div>
 <div class="name">Asad Ali Amjad</div>
 <div class="title">Experienced Software Engineer</div>
-<div class="contact">+92 32 1420 2636 | <a href="mailto:asad.ali.amjad@gmail.com">asad.ali.amjad@gmail.com</a> | <a href="https://www.linkedin.com/in/asad-ali-amjad-4b1004224/">LinkedIn</a> | <a href="https://github.com/asali23">GitHub</a></div>
+<div class="contact"><a href="tel:+923214202636">+92 32 1420 2636</a> | <a href="mailto:asad.ali.amjad@gmail.com">asad.ali.amjad@gmail.com</a></div>
+<div class="contact"><a href="https://www.linkedin.com/in/asad-ali-amjad-4b1004224/">LinkedIn.com/in/asad-ali-amjad-4b1004224</a></div>
+<div class="contact">Profile: <a href="https://asali23.github.io/asad.ali.amjad.github.io">https://asali23.github.io/asad.ali.amjad.github.io</a></div>
 <div class="location">Islamabad, Pakistan</div>
 </div>
 </div>
