Updated my resume to a new format

--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
 </head>
 <body>
     <h1>Asad Ali Amjad</h1>
-    <p>Experienced Software Engineer specializing in Embedded Systems, RTOS, Automation and Backend Development</p>
     <a href="resume.html">View Resume</a>
     <a href="https://github.com/asali23">GitHub</a>
-    <a href="https://www.linkedin.com/in/asad-ali-amjad-4b1004224/">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/AsadAliAmjad/">LinkedIn</a>
 </body>
 </html>
