Updated resume link to PDF format and removed obsolete HTML resume file

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <h1>Asad Ali Amjad</h1>
-    <a href="resume.html">View Resume</a>
+    <a href="resume.pdf">View Resume</a>
     <a href="https://github.com/asali23">GitHub</a>
     <a href="https://www.linkedin.com/in/AsadAliAmjad/">LinkedIn</a>
 </body>
